--- a/public/index.html
+++ b/public/index.html
@@ -23,30 +23,55 @@
 <div class="container">
     <h1>TODO app</h1>
 
-    <ul id="todo-container"></ul>
+    <div class="row">
+        <div class="col-md-6">
+            <ul id="todo-container" class="list-group"></ul>
+        </div>
+
+        <div class="col-md-6">
+            <form action="" method="post" id="add-task">
+
+                <div id="notification"></div>
+
+                <div class="form-group">
+                    <label class="control-label">ID</label>
+                    <input type="text" name="id" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label">Task</label>
+                    <input type="text" name="text" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Add</button>
+                </div>
+
+            </form>
+
+            <form action="" method="put" id="update-task" class="hidden">
+
+                <div class="form-group">
+                    <label class="control-label">ID</label>
+                    <input type="text" name="id" class="form-control id-field">
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label">Task</label>
+                    <input type="text" name="text" class="form-control text-field">
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Update</button>
+                    <a href="" class="btn btn-link storno-link">Storno</a>
+                </div>
+
+            </form>
+        </div>
+    </div>
+
 </div>
 
-<div class="container">
-    <form action="" method="post" id="add-task">
-
-        <div id="notification"></div>
-
-        <div class="form-group">
-            <label class="control-label">ID</label>
-            <input type="text" name="id" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label class="control-label">Task</label>
-            <input type="text" name="text" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">Add</button>
-        </div>
-
-    </form>
-</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.min.js"></script>
 <script src="/tasks.js"></script>
